<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/margin_medium">

    <TextView
        android:id="@+id/txt_node_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vLine1"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/info_name"
        android:textColor="@color/navigationBar"
        android:textSize="@dimen/txt_medium"/>

    <TextView
        android:id="@+id/edit_node_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txt_node_name"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/error_label_spacing"
        android:hint="@string/nulls"
        android:textColor="@color/primary"
        android:textSize="@dimen/txt_medium"/>

    <TextView
        android:id="@+id/txt_node_describe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_node_name"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/info_describe"
        android:textColor="@color/navigationBar"
        android:textSize="@dimen/txt_medium"/>

    <TextView
        android:id="@+id/edit_node_describe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_node_describe"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_medium"
        android:gravity="top|left"
        android:hint="@string/nulls"
        android:inputType="textMultiLine"
        android:lines="5"
        android:maxLines="10"
        android:minLines="3"
        android:scrollbars="vertical"
        android:textColor="@color/primary"
        android:textSize="@dimen/txt_medium"/>

    <TextView
        android:id="@+id/txt_type_sensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_node_describe"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/type_sensor"
        android:textColor="@color/navigationBar"
        android:textSize="@dimen/txt_medium"/>

    <TextView
        android:id="@+id/edit_type_sensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txt_type_sensor"
        android:layout_marginRight="@dimen/error_label_spacing"
        android:layout_alignParentRight="true"
        android:hint="@string/nulls"
        android:textColor="@color/primary"
        android:textSize="@dimen/txt_medium"/>

    <TextView
        android:id="@+id/txt_node_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_type_sensor"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/info_node"
        android:textColor="@color/navigationBar"
        android:textSize="@dimen/txt_medium"/>

    <TextView
        android:id="@+id/edit_node_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_node_note"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_medium"
        android:gravity="top|left"
        android:hint="@string/nulls"
        android:inputType="textMultiLine"
        android:lines="7"
        android:maxLines="20"
        android:minLines="5"
        android:scrollbars="vertical"
        android:textColor="@color/primary"
        android:textSize="@dimen/txt_medium"/>
</RelativeLayout>
