<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_medium">

    <TextView
        android:id="@+id/txt_device_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vLine1"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/info_name"
        android:textColor="@color/navigationBar"
        android:textSize="@dimen/txt_medium"/>

    <TextView
        android:id="@+id/edit_device_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txt_device_name"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/error_label_spacing"
        android:hint="@string/nulls"
        android:textColor="@color/primary"
        android:textSize="@dimen/txt_medium"/>

    <TextView
        android:id="@+id/txt_device_describe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_device_name"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/info_describe"
        android:textColor="@color/navigationBar"
        android:textSize="@dimen/txt_medium"/>

    <TextView
        android:id="@+id/edit_device_describe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_device_describe"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_medium"
        android:gravity="top|left"
        android:hint="@string/nulls"
        android:inputType="textMultiLine"
        android:lines="5"
        android:maxLines="10"
        android:minLines="3"
        android:scrollbars="vertical"
        android:textColor="@color/primary"
        android:textSize="@dimen/txt_medium"/>

    <TextView
        android:id="@+id/txt_type_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_device_describe"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/type_device"
        android:textColor="@color/navigationBar"
        android:textSize="@dimen/txt_medium"/>

    <TextView
        android:id="@+id/edit_type_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txt_type_device"
        android:layout_marginRight="@dimen/error_label_spacing"
        android:layout_alignParentRight="true"
        android:hint="@string/nulls"
        android:textColor="@color/primary"
        android:textSize="@dimen/txt_medium"/>

    <TextView
        android:id="@+id/txt_area_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_type_device"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/info_area"
        android:textColor="@color/navigationBar"
        android:textSize="@dimen/txt_medium"/>

    <TextView
        android:id="@+id/edit_area_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txt_area_name"
        android:layout_marginRight="@dimen/error_label_spacing"
        android:layout_alignParentRight="true"
        android:hint="@string/nulls"
        android:textColor="@color/primary"
        android:textSize="@dimen/txt_medium"/>

    <TextView
        android:id="@+id/txt_type_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_area_name"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="Loại điều kiện"
        android:textColor="@color/navigationBar"
        android:textSize="@dimen/txt_medium"/>

    <TextView
        android:id="@+id/edit_type_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txt_type_group"
        android:layout_marginRight="@dimen/error_label_spacing"
        android:layout_alignParentRight="true"
        android:hint="@string/nulls"
        android:textColor="@color/primary"
        android:textSize="@dimen/txt_medium"/>
</RelativeLayout>
