<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/margin_small"
    android:layout_marginRight="@dimen/margin_small"
    android:layout_marginTop="@dimen/margin_medium"
    android:elevation="@dimen/margin_medium">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_medium">

        <TextView
            android:id="@+id/tvLabelNodeInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="Thông tin Cảm biến"
            android:textColor="@color/navigationBar"
            android:textSize="@dimen/txt_medium" />

        <ImageView
            android:id="@+id/img_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_medium"
            android:src="@drawable/ic_more_vert_grey_500_24dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <View
            android:id="@+id/vLine1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_below="@+id/tvLabelNodeInfo"
            android:background="@color/primaryDark" />

        <TextView
            android:id="@+id/txt_node_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/vLine1"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/info_name"
            android:textColor="@color/navigationBar"
            android:textSize="@dimen/txt_medium"/>

        <EditText
            android:id="@+id/edit_node_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/txt_node_name"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/margin_small"
            android:hint="Cảm biến 1"
            android:textColor="@color/primary"
            android:textSize="@dimen/txt_medium" />

        <TextView
            android:id="@+id/txt_node_describe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_node_name"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/info_describe"
            android:textColor="@color/navigationBar"
            android:textSize="@dimen/txt_medium"/>

        <EditText
            android:id="@+id/edit_node_describe"
            android:inputType="textMultiLine"
            android:lines="5"
            android:minLines="3"
            android:maxLines="10"
            android:gravity="top|left"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_node_describe"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_medium"
            android:hint="Mô tả Node 1"
            android:textColor="@color/primary"
            android:textSize="@dimen/txt_medium" />

        <TextView
            android:id="@+id/txt_node_type_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_node_describe"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/type_device"
            android:textColor="@color/navigationBar"
            android:textSize="@dimen/txt_medium"/>

        <EditText
            android:id="@+id/edit_node_type_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/txt_node_type_device"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/margin_small"
            android:hint="Loại thiết bị 1"
            android:textColor="@color/primary"
            android:textSize="@dimen/txt_medium" />

        <TextView
            android:id="@+id/txt_node_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_node_type_device"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/info_node"
            android:textColor="@color/navigationBar"
            android:textSize="@dimen/txt_medium"/>

        <EditText
            android:id="@+id/edit_node_note"
            android:inputType="textMultiLine"
            android:lines="7"
            android:minLines="5"
            android:maxLines="20"
            android:gravity="top|left"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_node_note"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_small"
            android:hint="Khu vực 1"
            android:textColor="@color/primary"
            android:textSize="@dimen/txt_medium" />
    </RelativeLayout>
</android.support.v7.widget.CardView>